Fix long audio and file names not wrapping, see #8

--- a/gwaripper_webGUI/static/style.css
+++ b/gwaripper_webGUI/static/style.css
@@ -156,6 +156,7 @@ hr {
     padding: .5em;
     flex-shrink: 1;
     flex-grow: 1;
+    word-wrap: anywhere;
 }
 .entry-expand-inner {
     width: 100%;
